--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,6 +4,7 @@
     <title>Keine Waste</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <% assets.styles.forEach(function(style) { %>
         <link href="<%- style %>" media="screen" rel="stylesheet" />
     <% }); %>
