--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -1,4 +1,9 @@
+@import 'header';
+
 body {
+
     font-family: Lato;
-    background: cornsilk;
+    background: black;
+    padding: 0;
+    margin: 0;
 }
