--- a/client/react/components/profile/edit/edit-profile.scss
+++ b/client/react/components/profile/edit/edit-profile.scss
@@ -1,8 +1,8 @@
 .edit-profile {
-    padding: 60px 110px;
+    margin: 60px 10% 0 30%;
+    width: 600px;
 
     h2 {
-        /* Text style for "Michael Schuma" */
         font-size: 36px;
         font-weight: 900;
         letter-spacing: 1.08px;
@@ -11,14 +11,44 @@
 
     .wrap {
         display: flex;
+        align-items: flex-start;
 
-        img {
+        .avatar {
             margin-right: 90px;
         }
 
         .form {
             width: 330px;
 
+
+            .choose-team {
+
+                .title {
+                    color: #e45a4c;
+                    font-size: 22px;
+                    font-weight: 700;
+                    letter-spacing: 0.72px;
+                    line-height: 29px;
+                }
+
+
+                .team-picker {
+                    display: flex;
+
+                    justify-content: space-between;
+
+
+                    .team-title {
+                        text-align: center;
+
+                        color: #4a4a4a;
+                        font-size: 16px;
+                        font-weight: 700;
+                        letter-spacing: 0.54px;
+                        line-height: 22px;
+                    }
+                }
+            }
         }
     }
 
