--- a/client/assets/styles/_header.scss
+++ b/client/assets/styles/_header.scss
@@ -1,5 +1,13 @@
 @import 'client/assets/styles/core/variables';
+.main-header {
+    width: 100%;
+    background-color: #4a4a4a;
+    height: 80px;
 
+    .header-logo {
+        margin-left: 30px;
+    }
+}
 .header {
     width: 100%;
     height: $headerHeight;
