added autocomplete list

--- a/client/react/components/donate/step1/create-offer.scss
+++ b/client/react/components/donate/step1/create-offer.scss
@@ -1,6 +1,8 @@
 .create-offer {
     .content {
         padding: 85px 110px;
+        max-width: 1080px;
+        margin: auto;
 
         h1 {
             color: #4a4a4a;
