--- a/client/react/components/donate/step1/food-input.scss
+++ b/client/react/components/donate/step1/food-input.scss
@@ -6,4 +6,14 @@
         letter-spacing: 0.54px;
         line-height: 22px;
     }
+
+    .food-item {
+        text-align: left;
+        height: 24px;
+        margin-bottom: 10px;
+        color: #4a4a4a;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 24px;
+    }
 }
