--- a/client/react/components/donate/step2/confirm-offer.scss
+++ b/client/react/components/donate/step2/confirm-offer.scss
@@ -17,7 +17,7 @@
             display: flex;
 
             justify-content: flex-start;
-
+            align-items: flex-start;
             .left {
                 flex-basis: 500px;
                 margin-right: 50px;
