--- a/client/react/components/donate/step2/confirm-offer.scss
+++ b/client/react/components/donate/step2/confirm-offer.scss
@@ -28,6 +28,8 @@
                     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
 
                     &-logo {
+                        width: 136px;
+                        max-height: 180px;
 
                     }
 
